<resources>
    <string name="app_name">Store Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_btn">Back</string>
    <string name="app_heading">Store Details</string>
    <string name="direction_btn">Directions</string>
    <string name="distance_heading">Distance</string>
    <string name="distance_text">8 miles</string>
    <string name="call_store_btn">Call Store</string>
    <string name="order_food_btn">Order Food</string>
    <string name="map_api">AIzaSyBWEjNC4_EeEab-8GcGuZ3AaKUn0Dv3CB4</string>

    <string-array name="days_name">
        <item>SUNDAY</item>
        <item>MONDAY</item>
        <item>TUESDAY</item>
        <item>WEDNESDAY</item>
        <item>THURSDAY</item>
        <item>FRIDAY</item>
        <item>SATURDAY</item>
    </string-array>
</resources>
