<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragment.StoreDetailsFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance_heading"
                        android:textSize="15sp" />

                    <TextView
                        style="@style/TextTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance_text"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="Bellastand"
                        android:textSize="20sp" />

                    <TextView
                        style="@style/TextTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="45 McDermott Shores Suites 760"
                        android:textSize="15sp" />

                    <TextView
                        style="@style/TextTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="United States - 92127"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <Button
                            style="@style/TextTheme"
                            android:layout_width="100dp"
                            android:layout_height="30dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/button_background_round_corner"
                            android:text="Wifi"
                            android:textAllCaps="false" />

                        <Button
                            style="@style/TextTheme"
                            android:layout_width="100dp"
                            android:layout_height="30dp"
                            android:background="@drawable/button_background_round_corner"
                            android:text="Parking"
                            android:textAllCaps="false" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="@color/brown_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Store Hours"
                    android:textSize="20sp" />


                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:clipToPadding="false"
                    android:overScrollMode="ifContentScrolls" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <Button
                        style="@style/TextTheme"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background_large"
                        android:text="@string/call_store_btn"
                        android:textSize="15sp" />

                    <Button
                        style="@style/TextTheme"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background_large"
                        android:text="@string/order_food_btn"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>